Add more refactor project