@@ -1,15 +1,13 @@
 package br.com.fiap.postech.fastfood.ports.cliente;
 
+import br.com.fiap.postech.fastfood.domain.cliente.Cliente;
 import br.com.fiap.postech.fastfood.repository.cliente.ClienteJpaRepository;
 import br.com.fiap.postech.fastfood.repository.entities.ClienteEntity;
-import br.com.fiap.postech.fastfood.domain.cliente.Cliente;
-import br.com.fiap.postech.fastfood.ports.cliente.ClientePersistencePort;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
-import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
-import java.util.List;
 
+import java.util.List;
 
 @RequiredArgsConstructor
 @Component
@@ -26,7 +24,7 @@ public class ClientePersistencePortImpl implements ClientePersistencePort {
 
     @Override
     public List<Cliente> findAll() {
-        return clienteJpaRepository.findAll().stream().map(entity -> modelMapper.map(entity, Cliente.class)).collect(Collectors.toList());
+        return clienteJpaRepository.findAll().stream().map(entity -> modelMapper.map(entity, Cliente.class)).toList();
     }
 
     @Override
