@@ -1,18 +1,18 @@
 package br.com.fiap.postech.fastfood.ports.itempedido;
 
+import br.com.fiap.postech.fastfood.domain.item.Item;
+import br.com.fiap.postech.fastfood.domain.itempedido.ItemPedido;
 import br.com.fiap.postech.fastfood.repository.entities.ItemEntity;
 import br.com.fiap.postech.fastfood.repository.entities.ItemPedidoEntity;
 import br.com.fiap.postech.fastfood.repository.entities.PedidoEntity;
 import br.com.fiap.postech.fastfood.repository.item.ItemJpaRepository;
 import br.com.fiap.postech.fastfood.repository.itempedido.ItemPedidoJpaRepository;
 import br.com.fiap.postech.fastfood.repository.pedido.PedidoJpaRepository;
-import br.com.fiap.postech.fastfood.domain.item.Item;
-import br.com.fiap.postech.fastfood.domain.itempedido.ItemPedido;
-import br.com.fiap.postech.fastfood.ports.itempedido.ItemPedidoPersistencePort;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
+
+import java.util.List;
 
 @RequiredArgsConstructor
 @Component
@@ -23,11 +23,11 @@ public class ItemPedidoPersistencePortImpl implements ItemPedidoPersistencePort 
   private final ItemJpaRepository itemJpaRepository;
   private final ModelMapper modelMapper;
 
-
   @Override
   public ItemPedido addItemPedido(String numeroPedido, Item item, Integer quantidade) {
     PedidoEntity pedidoEntity = pedidoJpaRepository.findByNumeroPedido(numeroPedido);
-    ItemEntity itemEntity = itemJpaRepository.findById(item.getId()).get();
+    ItemEntity itemEntity = itemJpaRepository.findById(item.getId())
+            .orElse(null);
 
     if (pedidoEntity == null || itemEntity == null) {
       // Lógica de tratamento caso o pedido ou item não sejam encontrados
@@ -35,7 +35,6 @@ public class ItemPedidoPersistencePortImpl implements ItemPedidoPersistencePort 
     }
 
     ItemPedidoEntity itemPedidoEntity = itemPedidoJpaRepository.findByPedidoAndItem(pedidoEntity, itemEntity);
-
 
     if (itemPedidoEntity != null) {
       // Já existe um ItemPedidoEntity para o mesmo pedido e item, então atualize a quantidade e o valor
@@ -66,13 +65,7 @@ public class ItemPedidoPersistencePortImpl implements ItemPedidoPersistencePort 
 
   @Override
   public List<ItemPedido> findAll() {
-    return itemPedidoJpaRepository.findAll().stream().map(entity -> modelMapper.map(entity, ItemPedido.class)).collect(
-        java.util.stream.Collectors.toList());
-  }
-
-  @Override
-  public List<ItemPedido> findByID(Long id) {
-    return null;
+    return itemPedidoJpaRepository.findAll().stream().map(entity -> modelMapper.map(entity, ItemPedido.class)).toList();
   }
 
   @Override
@@ -82,7 +75,6 @@ public class ItemPedidoPersistencePortImpl implements ItemPedidoPersistencePort 
       // Lógica de tratamento caso o pedido não seja encontrado
       return null;
     }
-    return itemPedidoJpaRepository.findByPedido(pedidoEntity).stream().map(entity -> modelMapper.map(entity, ItemPedido.class)).collect(
-        java.util.stream.Collectors.toList());
+    return itemPedidoJpaRepository.findByPedido(pedidoEntity).stream().map(entity -> modelMapper.map(entity, ItemPedido.class)).toList();
   }
 }
